feat(orders): complete shiprocket logistics workflow, stock deduction/restoration, clickable customer dossier, and manifest integration